[package]
name = "amethyst_lib"
version = "0.0.1"
authors = ["Rodrigo Oliveira <rodrigo.redcode@gmail.com>", "Pablo Diego Silva da Silva <pablodiegoss@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
cbindgen = "0.13.1"

[lib]
crate-type = ["cdylib"]
