[package]
name = "amethyst_script"
version = "0.0.1"
authors = ["Amethyst Foundation <contact@amethyst.rs>"]
edition = "2018"
description = "Scripting system for multiple languages"
keywords = ["game", "engine", "scripting", "script", "amethyst"]
categories = ["scripting", "scripting::engine"]
license = "MIT/Apache-2.0"


[dependencies]
amethyst_core = { path = "../amethyst_core", version = "0.10.1"}
amethyst_lib = { path = "../amethyst_lib", version = "0.0.1" }
amethyst_assets = { path = "../amethyst_assets", version = "0.11.1" }
amethyst_error = { path = "../amethyst_error", version = "0.5.1" }
serde = { version = "1.0", features = ["derive"] }
shred = "0.10.2"
hashbrown = "0.7.1"
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
