[package]
name = "amethyst_scripting"
version = "0.0.1"
authors = ["Rodrigo Oliveira <rodrigo.redcode@gmail.com>", "Pablo Diego Silva <pablodiegoss@hotmail.com>"]
edition = "2018"
description = "Extensible scripting system"
keywords = ["game", "engine", "scripting", "script", "amethyst"]
categories = ["scripting", "scripting::engine"]
license = "MIT/Apache-2.0"

[dependencies]
amethyst_core = { path = "../amethyst_core" }
amethyst_assets = { path = "../amethyst_assets" }
amethyst_error = { path = "../amethyst_error" }
serde = { version = "1.0", features = ["derive"] }
libc = "0.2.0"

[build-dependencies]
cc = "1.0"
pkg-config = "0.3"
